added zomato icon

--- a/index.htm
+++ b/index.htm
@@ -1,6 +1,10 @@
 <!DOCTYPE html>
 <html lang="en">
     <head>
+        <!-- zomato icon -->
+        <link rel="icon" 
+        href="https://upload.wikimedia.org/wikipedia/commons/thumb/9/92/Zomato.svg/2048px-Zomato.svg.png" 
+        type="image/x-icon">
         <!-- Font awesome -->
         <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css" 
         integrity="sha512-iecdLmaskl7CVkqkXNQ/ZH/XLlvWZOJyj7Yy7tcenmpD1ypASozpmT/E0iPtmFIB46ZmdtAc9eNBvH0H/ZpiBw==" 
